- Switch to the "Current Mark Sweep" garbage collector - Split memory use columns out by pool (Eden/Survivor/Old) - Turn the RMI GC forcing down to once-an-hour